# pydatatest

./: .gitignore  README.en-US.md  README.md  __init__.py  pyproject.toml  setup.py
example/usecase/: __init__.py  runner.py
example/usecase/user/: __init__.py  login_test.py
examples/: main.py  pyproject.toml  simple_demo.py
examples/data/csv/: login.csv
examples/data/yml/: data.yml
examples/usecase/user/: login_test.py
pydatatest/: pyproject.toml  setup.py
pydatatest/api/: __init__.py
pydatatest/common/: __init__.py  base.py  inject.py  runner.py
pydatatest/data/: csv.py
pydatatest/model/: data_generator.py  data_model.py
pydatetest/: pyproject.toml
pydatetest/common/: http.py  run_test.py
pydatetest/data/: yaml.py
src/: Pipfile  __init__.py  main.py  setup.py
src/base/: run_test.py
src/data/csv/: login.csv
src/model/: __init__.py  rule.py  usecase.py
src/pydatatest/: __init__.py  main.py
src/pydatatest/api/: __init__.py
src/pydatatest/common/: inject.py  runner.py  testcase.py
src/pydatatest/util/: csv.py  inspect.py
src/usecase/user/: login_test.py
