[tool.poetry]
name = "pydatatest"
version = "1.0.6"
description = "Data driven python test framework"
authors = ["aak1247 <aak1247@126.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/aak1247/PyDataTest"
repository = "https://github.com/aak1247/PyDataTest"
keywords = ["test", "data driven", "test framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
