[project]
name = "pydatatest-examples"
version = "0.1.0"
description = ""
authors = [
    {name = "aak1247",email = "aak1247@126.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydatatest (==1.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
