[tool.poetry]
name = "pydatetest"
version = "0.1.0"
description = "Data driven python test framework"
authors = ["aak1247 <aak1247@126.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
